--- a/SlidingMenu/res/layout/blog_viewer.xml
+++ b/SlidingMenu/res/layout/blog_viewer.xml
@@ -3,7 +3,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
-
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="470dp">
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
@@ -12,28 +15,31 @@
             android:textSize="25dp"
             android:textAllCaps="true"
             android:textStyle="bold"
-            android:textAlignment="center"
             android:background="#ffc9deee" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textAlignment="center"
+            android:text="TextView"
             android:textSize="20dp"
             android:background="#ffd4eee3"/>
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
-            android:layout_height="420dp"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:scrollbars = "vertical"
             android:autoLink="web"
             android:textColorLink="#ffff3e55"
             android:background="#ffd4eee3"/>
-
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -42,4 +48,5 @@
             android:id="@+id/list_comment"
             android:autoLink="web"
             ></Button>
+    </LinearLayout>
     </LinearLayout>
