--- a/SlidingMenu/res/layout/comment.xml
+++ b/SlidingMenu/res/layout/comment.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:textSize="15dp"
-    />
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/listOfComment">
+    </ListView>
+    </LinearLayout>
